--- a/ant-theme-vars.less
+++ b/ant-theme-vars.less
@@ -1,3 +1,4 @@
-@primary-color: rgb(248, 125, 9); 
+// @primary-color: rgb(248, 125, 9); 
+@primary-color: red; 
 @component-background : rgb(255, 255, 255);
 @layout-body-background  : rgb(255, 255, 255);
